framec_tests/language_specific/python/v3_facade_smoke/negative/forward_with_args.frm
@target python

system S {
    machine:
        $A {
            e() {
                __frame_forward(1)
            }
        }
}

